snapshots/truth__var__tests__err_func_redefinition.snap
---
source: src/var.rs
expression: "resolve_expect_err::<ast::Script>(r#\"\n    int foo(int x) {\n        return x;\n    }\n\n    int foo(float y) {\n        return y;\n    }\n    \"#,\n                                  \"redefinition\").trim()"
---
error: redefinition of func 'foo'
  ┌─ <input>:6:9
  │
2 │     int foo(int x) {
  │         --- originally defined here
  ·
6 │     int foo(float y) {
  │         ^^^ redefinition of function
